--- a/game-recolor/style.css
+++ b/game-recolor/style.css
@@ -3,6 +3,8 @@
   border: 0;
   box-sizing: border-box;
   font-size: 2vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 table {
@@ -15,6 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  color: #392129;
 }
 
 header {
@@ -26,19 +29,19 @@ header {
 
 h1 {
   font-size: 4rem;
-  color: rgb(36, 167, 167);
+  color: #392129;
 }
 
 main {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: auto;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 2rem;
 }
 
 td {
-  height: 6vh;
-  min-width: 6vh;
+  height: 7vh;
+  min-width: 7vh;
 }
 
 button {
@@ -46,52 +49,112 @@ button {
   height: 1.8rem;
   margin: 5px;
   border-radius: 3px;
+  box-shadow: 0px 3px 4px -2px #500606a8;
+  transition: 0.3s;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+button:active {
+  width: 2.9rem;
+  height: 1.6rem;
 }
 
 .wrap {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: stretch;
-  align-content: stretch;
-  flex: 1 1 auto;
   padding: 1rem;
-  height: auto;
-}
-
-.buttons__field {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 10px;
+  margin: 1rem;
+  border-radius: 0.2rem;
+  box-shadow:
+   0 1px 4px rgba(0, 0, 0, .3),
+   -15px 0 20px -23px rgba(0, 0, 0, .8),
+   15px 0 20px -23px rgba(0, 0, 0, .8),
+   0 0 40px rgba(0, 0, 0, .1) inset;
 }
 
 .count {
   display: flex;
   flex-direction: column;
-  align-content: stretch;
-  border: 0.2rem solid rgb(71, 71, 245);
+  border: 0.2rem solid rgb(155, 155, 155);
   border-radius: 0.3rem;
   padding: 0.5rem;
-  flex: 1 0 auto;
 }
 
 .count__title {
-  flex: 1 1 auto;
+  font-size: 2.5rem;
+  padding: 2rem;
+  flex: 0 1 auto;
+  color: #86534e;
 }
 
 .count__result {
+  flex: 1 1 auto;
   display: flex;
-  flex: 2 1 auto;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
 }
 
 .count__result-text {
+  display: flex;
+  font-size: 2rem;
   min-height: 5vh;
+  color: #86534e;
 }
 
 .count__result-number {
-  min-width: 10vh;
-  min-height: 10vh;
-  border: 1px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 1rem;
+  height: 8rem;
+  width: 8rem;
+  border: 1px solid rgb(155, 155, 155);
+  border-radius: 0.3rem;
+}
+
+.count__result-number span {
+  font-size: 5rem;
+  color: #af323b;
+  -webkit-animation: text 2s 1;
+  animation: text 0.5s;
+}
+
+@-webkit-keyframes text {
+  0% {
+    font-size: 0.5rem;
+  }
+
+  100% {
+    font-size: 5rem;
+  }
+}
+
+@keyframes text {
+  0% {
+    font-size: 0.5rem;
+  }
+
+  100% {
+    font-size: 20rem;
+    color: #86534e;
+    opacity: 0.7;
+  }
+}
+
+.game__field {
+  padding: 1rem;
+}
+
+.topology {
+}
+
+.buttons__field {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
 }
