--- a/game-recolor/style.css
+++ b/game-recolor/style.css
@@ -45,21 +45,32 @@ td {
 }
 
 button {
-  width: 3rem;
-  height: 1.8rem;
+  width: 4rem;
+  height: 2.3rem;
   margin: 5px;
   border-radius: 3px;
   box-shadow: 0px 3px 4px -2px #500606a8;
   transition: 0.3s;
+  cursor: pointer;
+  position: relative;
 }
 
 button:hover {
   opacity: 0.8;
+  left: -1px;
+  bottom: -1px;
 }
 
 button:active {
-  width: 2.9rem;
-  height: 1.6rem;
+  border: 1rem solid #500606a8;
+  left: +1px;
+  bottom: +1px;
+}
+
+#clear {
+  width: 18rem;
+  height: 6rem;
+  font-size: 1.5rem;
 }
 
 .wrap {
@@ -67,11 +78,9 @@ button:active {
   padding: 1rem;
   margin: 1rem;
   border-radius: 0.2rem;
-  box-shadow:
-   0 1px 4px rgba(0, 0, 0, .3),
-   -15px 0 20px -23px rgba(0, 0, 0, .8),
-   15px 0 20px -23px rgba(0, 0, 0, .8),
-   0 0 40px rgba(0, 0, 0, .1) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
+    -15px 0 20px -23px rgba(0, 0, 0, 0.8), 15px 0 20px -23px rgba(0, 0, 0, 0.8),
+    0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
 .count {
@@ -146,10 +155,10 @@ button:active {
 }
 
 .game__field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 1rem;
-}
-
-.topology {
 }
 
 .buttons__field {
@@ -157,4 +166,9 @@ button:active {
   flex-wrap: wrap;
   justify-content: center;
   padding: 10px;
+  width: 100%;
+}
+
+.hide {
+  display: none;
 }
